Support jlink runtime image and modular build